[gd_scene load_steps=7 format=2]

[ext_resource path="res://Character/Player/Player_abstract.tscn" type="PackedScene" id=1]
[ext_resource path="res://Character/Player/Player_xy_1.gd" type="Script" id=2]
[ext_resource path="res://Character/Player/player animation_xy_1.tres" type="SpriteFrames" id=3]
[ext_resource path="res://cave/HP_bar/health bar.png" type="Texture" id=4]
[ext_resource path="res://cave/HP_bar/fill.png" type="Texture" id=5]



[sub_resource type="CapsuleShape2D" id=1]
height = 59.9874

[node name="Player_xy_1" instance=ExtResource( 1 )]
position = Vector2( 7.43457, 11.8285 )
scale = Vector2( 2, 2 )
z_as_relative = false
script = ExtResource( 2 )

[node name="AnimatedSprite" parent="." index="0"]
position = Vector2( 6.28134, -45.1896 )
scale = Vector2( 0.0332089, 0.035 )
frames = ExtResource( 3 )
animation = "jump"
playing = true

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 6.30285, -49.6035 )
shape = SubResource( 1 )

[node name="Camera2D" parent="." index="2"]
position = Vector2( -3.06048, -49.6475 )
current = true
zoom = Vector2( 1.3, 1.1 )
limit_smoothed = true
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
editor_draw_limits = true

[node name="HealthBar" type="TextureProgress" parent="." index="4"]
modulate = Color( 0.929412, 0.94902, 0.92549, 1 )
margin_left = -32.7169
margin_top = -128.737
margin_right = 3024.28
margin_bottom = 1522.26
rect_scale = Vector2( 0.03, 0.02 )
value = 100.0
texture_under = ExtResource( 4 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )
tint_under = Color( 0.0627451, 0.0352941, 0.976471, 1 )
tint_progress = Color( 0.0493927, 0.972656, 0.366765, 1 )
nine_patch_stretch = true

[node name="Tween" type="Tween" parent="HealthBar" index="0"]

[node name="Timer" type="Timer" parent="." index="5"]
one_shot = true

[node name="Position2D" type="Position2D" parent="." index="6"]
position = Vector2( 23.188, -39.2238 )
scale = Vector2( 5, 5 )
z_as_relative = false
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
